# latentloop_transformer

./: .gitignore  DATA_PIPELINE_SPEC.md  README.md  pyproject.toml  requirements-local-v2.txt
configs/: 4070_512_preflight.yaml  from_scratch_265m_approx.yaml  from_scratch_full_1m.yaml  local_v2_16k_phase1_4070.yaml  local_v2_16k_phase1_4070_safe.yaml  local_v3_16k_joint_4070.yaml  local_v3_16k_phase1_4070.yaml  local_v3_16k_phase1_4070_safe.yaml  phase1_5b_v2_memory_4070_16k.yaml  phase1_5b_v2_memory_4070_64k.yaml  phase1_5b_v3_memory_4070_16k.yaml  smoke_tiny.yaml
docs/: CODEX_LOCAL_V2_16K_FROM_ZERO_GOAL.md  CODEX_LOCAL_V3_16K_GOAL.md  CODEX_LOCAL_V3_PHASE0_TO_PHASE3_GOAL.md  CODEX_PHASE1_5B_V2_GOAL.md  FIXED_AUDIT_AND_TEST_REPORT.md  LOCAL_V2_16K_FROM_ZERO_SPEC.md  LOCAL_V2_16K_PACKAGE_AUDIT.md  LOCAL_V2_16K_RUN_PLAN_ACTIVE.json  LOCAL_V3_16K_ARCHITECTURE_SPEC.md  LOCAL_V3_16K_IMPLEMENTATION_AUDIT.md  LOCAL_V3_PHASE0_TO_PHASE3_IMPLEMENTATION_AUDIT.md  LOCAL_V3_PHASE0_TO_PHASE3_SPEC.md  PHASE1_5B_V2_MEMORY_OBJECTIVE_SPEC.md  REAL_SMOKE_1M_TRAINING_REPORT.md  V2_IMPLEMENTATION_AUDIT_REPORT.md
scripts/: eval_generation_smoke.py  extract_memory_features.py  generate.py  generate_local_v3.py  make_synthetic_memory_features.py  profile_local_v3.py  run_local_v2_16k_from_zero.py  run_local_v3_16k.py  run_local_v3_phase0_to_phase3.py  smoke_forward.py  spec_audit.py  train.py  train_joint_memory_lm.py  train_memory_v2.py  train_memory_v3.py
tests/: test_correctness.py  test_data_pipeline_cache.py  test_local_v2_from_zero.py  test_local_v3_phase03.py  test_smoke.py  (+4 more)
(+41 files in other folders)
